[package]
name = "derive-guiid"
version = "0.1.0"
authors = ["Henrik Patjens <hpatjens@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"
iwgui = { path = "../../iwgui" }

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[[test]]
name = "tests"
path = "tests/all.rs"